Move button to switch back to answered content to statistic component to prevent overlapping buttons

--- a/src/app/components/participant/content/content-participant/content-participant.component.scss
+++ b/src/app/components/participant/content/content-participant/content-participant.component.scss
@@ -24,14 +24,6 @@ p {
   padding: 10px 0;
 }
 
-.toggleSide {
-  background-color: var(--surface);
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
 .invisible {
   position: absolute;
   left: 50%;
